--- a/css/stats.css
+++ b/css/stats.css
@@ -9,9 +9,18 @@
 	color: #383F51;
 }
 
-.stats-calendar {
+.calendar {
 	display: inline;
 	margin-top: 10px;
+	width: 280px;
+	height: 240px;
+}
+
+.bubble-container {}
+
+.bubble-chart {
+	width: 350px;
+	height: 350px;
 }
 
 @media (min-width: 768px) {
@@ -20,7 +29,7 @@
 		font-size: 60px;
 	}
 
-	.stats-calendar {
+	.calendar {
 		width: 700px;
 		height: 600px;
 	}
@@ -32,7 +41,7 @@
 
 	}
 
-	.stats-calendar {
+	.calendar {
 		width: 910px;
 		height: 780px;
 	}
