--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,7 @@ body {
 	margin: 0px;
 	font-family: 'Source Sans Pro', sans-serif;
 	display: block;
+    text-align: center;
 }
 
 a { text-decoration: none; }
@@ -17,6 +18,24 @@ a:hover { text-decoration: none; }
 a:focus { text-decoration: none; }
 
 a:hover, a:active { text-decoration: none; }
+
+.header {
+    display: inline-block;
+    height: 100px;
+}
+
+.logo {
+    margin-top: 20px;
+    width: 80px;
+    height: 80px;
+    float: left;
+}
+
+.header-title {
+    color: #383F51;
+    float: left;
+    margin-top: 35px;
+}
 
 /* Mobile devices (default width is 100%) */
 [class*="col-"] {
@@ -37,6 +56,20 @@ a:hover, a:active { text-decoration: none; }
     .col-s-10 {width: 83.33%;}
     .col-s-11 {width: 91.66%;}
     .col-s-12 {width: 100%;}
+
+    .logo {
+        width: 120px;
+        height: 120px;
+    }
+
+    .header {
+        height: 150px;
+    }
+
+    .header-title {
+        font-size: 50px;
+        line-height: 75px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -68,4 +101,8 @@ a:hover, a:active { text-decoration: none; }
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
+
+    .header-title {
+        font-size: 70px;
+    }
 }
