Make certain text unselectable, make tasks window smaller.

--- a/css/common.css
+++ b/css/common.css
@@ -19,6 +19,14 @@ a:focus { text-decoration: none; }
 
 a:hover, a:active { text-decoration: none; }
 
+.unselectable {
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
+
 .header {
     display: inline-block;
     height: 100px;
